# HZB

./: .clang-format  .gitignore  .~lock.上机报告.docx#  CMakeLists.txt  README.MD  上机报告.docx
src/: Camera.h  Displayer.cpp  Displayer.h  OctTree.cpp  OctTree.h  Rasterizer.cpp  Rasterizer.h  RenderOBJ.cpp  RenderOBJ.h  ScanZBuffer.cpp  ScanZBuffer.h  Shader.h  Triangle.cpp  Triangle.h  Util.h  ZBuffer.cpp  ZBuffer.h  main.cpp
